// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json_encoding.sql > line 13 1`] = `
[
  "           -- just to label the results files

-- first json

-- basic unicode input
SELECT '"\\u"'::json",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 92,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 92,
                          "sval": {
                            "sval": ""\\u"",
                          },
                        },
                      },
                      "location": 98,
                      "typeName": {
                        "location": 100,
                        "names": [
                          {
                            "String": {
                              "sval": "json",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`json_encoding.sql > line 22 1`] = `
[
  "		-- OK, uppercase and lower case both OK

-- handling of unicode surrogate pairs

select json '{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }' -> 'a' as correct_in_utf8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 90,
                  "name": "correct_in_utf8",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 95,
                              "sval": {
                                "sval": "{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 90,
                            "names": [
                              {
                                "String": {
                                  "sval": "json",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 134,
                      "name": [
                        {
                          "String": {
                            "sval": "->",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 137,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`json_encoding.sql > line 40 1`] = `
[
  "select json '{ "a":  "the Copyright \\u00a9 sign" }' ->> 'a' as correct_in_utf8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "correct_in_utf8",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "{ "a":  "the Copyright \\u00a9 sign" }",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "json",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 52,
                      "name": [
                        {
                          "String": {
                            "sval": "->>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 56,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`json_encoding.sql > line 53 1`] = `
[
  "		-- ERROR, we don't support U+0000
-- use octet_length here so we don't get an odd unicode char in the
-- output
SELECT octet_length('"\\uaBcD"'::jsonb::text)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 121,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 134,
                                    "sval": {
                                      "sval": ""\\uaBcD"",
                                    },
                                  },
                                },
                                "location": 144,
                                "typeName": {
                                  "location": 146,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "jsonb",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            "location": 151,
                            "typeName": {
                              "location": 153,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "octet_length",
                          },
                        },
                      ],
                      "location": 121,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`json_encoding.sql > line 56 1`] = `
[
  " -- OK, uppercase and lower case both OK

-- handling of unicode surrogate pairs

SELECT octet_length((jsonb '{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }' -> 'a')::text) AS correct_in_utf8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 89,
                  "name": "correct_in_utf8",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "TypeCast": {
                                    "arg": {
                                      "A_Const": {
                                        "location": 109,
                                        "sval": {
                                          "sval": "{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }",
                                        },
                                      },
                                    },
                                    "location": -1,
                                    "typeName": {
                                      "location": 103,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "jsonb",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                                "location": 148,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "->",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "location": 151,
                                    "sval": {
                                      "sval": "a",
                                    },
                                  },
                                },
                              },
                            },
                            "location": 155,
                            "typeName": {
                              "location": 157,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "octet_length",
                          },
                        },
                      ],
                      "location": 89,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
